ADding people's choice award

--- a/index.html
+++ b/index.html
@@ -1552,7 +1552,9 @@
 
                 <!-- IBM People's Choice Award -->
                 <div class="badge-container reveal">
-                    <div class="badge-image" style="display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, #667eea, #764ba2); color: white; border-radius: 50%; font-size: 2.5rem; font-weight: 700;">🏆</div>
+                    <div class="badge-image" style="display: flex; align-items: center; justify-content: center;  color: white; border-radius: 50%; font-size: 2rem; font-weight: 700;">
+                        <img src="assets/PeoplesChoice.png"  alt="People's Choice Award by Red Hat Marketplace operated by IBM" class="badge-image">
+                    </div>
                     <div class="badge-name">People's Choice Award</div>
                     <div class="badge-issuer">IBM</div>
                     <div class="badge-date">2020</div>
