deleting unecessary files

--- a/index.html
+++ b/index.html
@@ -1524,7 +1524,7 @@
 
                 <!-- Google Mobile Web Specialist -->
                 <div class="badge-container reveal">
-                    <img src="assets/Mobile-Web-Specialist-Badge.png" alt="Mobile Web Specialist by Google Developers" class="badge-image">
+                    <img src="/portfolio/jannaee.github.io/assets/Mobile-Web-Specialist-Badge.png" alt="Mobile Web Specialist by Google Developers" class="badge-image">
                     <div class="badge-name">Mobile Web Specialist</div>
                     <div class="badge-issuer"><a href="https://developers.googleblog.com/introducing-the-mobile-web-specialist-certification-by-google-developers/" target="_blank">Google & Udacity</a></div>
                     <div class="badge-date">2018</div>
