using real testimonials

--- a/index.html
+++ b/index.html
@@ -1445,18 +1445,18 @@
                 <button class="carousel-button next" aria-label="Next testimonial">›</button>
                 
                 <div class="testimonial-track">
-                    <!-- Testimonial 1 -->
+                    <!-- Baris S.-->
                     <div class="testimonial">
                         <div class="testimonial-content">
                             <p class="testimonial-quote">
-                                Jannaee brings an exceptional combination of design sensibility and technical expertise. Her work on our design system transformed how our teams collaborate and deliver consistent user experiences. She's a true asset to any organization.
+                                She's great at slowing complex issues down, explaining her thinking clearly, and keeping the user experience front and center. She's a strong engineer, a genuine collaborator, and any team would be lucky to have her.
                             </p>
                         </div>
                         <div class="testimonial-author">
-                            <div class="author-image">SM</div>
+                            <div class="author-image">BS</div>
                             <div class="author-info">
-                                <div class="author-name">Sarah Mitchell</div>
-                                <div class="author-title">Product Manager, IBM</div>
+                                <div class="author-name">Baris S.</div>
+                                <div class="author-title">Staff Software Engineer II Applied Research Associates (ARA)</div>
                             </div>
                         </div>
                     </div>
@@ -1465,14 +1465,14 @@
                     <div class="testimonial">
                         <div class="testimonial-content">
                             <p class="testimonial-quote">
-                                Working with Jannaee on accessibility initiatives was a game-changer. She doesn't just meet WCAG standards—she champions inclusive design in everything she creates. Her attention to detail and user empathy are unmatched.
+                                Not only is she clearly an expert at user interface design, but she really knows how to articulate and communicate her work in ways that promote teamwork and open communication. She seeks involvement and feedback from many stakeholders during the planning & design stages, with the clear end goal of a great user experience.
                             </p>
                         </div>
                         <div class="testimonial-author">
-                            <div class="author-image">DK</div>
+                            <div class="author-image">VH</div>
                             <div class="author-info">
-                                <div class="author-name">David Kim</div>
-                                <div class="author-title">Engineering Lead, Red Hat</div>
+                                <div class="author-name">Vincent H.</div>
+                                <div class="author-title">Principal Scientist, Applied Research Associates (ARA)</div>
                             </div>
                         </div>
                     </div>
@@ -1481,19 +1481,18 @@
                     <div class="testimonial">
                         <div class="testimonial-content">
                             <p class="testimonial-quote">
-                                Jannaee's ability to translate complex requirements into intuitive interfaces is remarkable. She led our user research efforts and delivered designs that significantly improved our key metrics. Her collaborative approach made the entire team better.
+                                Lorem ipsum
                             </p>
                         </div>
                         <div class="testimonial-author">
-                            <div class="author-image">RP</div>
+                            <div class="author-image">CS</div>
                             <div class="author-info">
-                                <div class="author-name">Rachel Patel</div>
-                                <div class="author-title">Director of UX, EverBank</div>
+                                <div class="author-name">Coming Soon</div>
+                                <div class="author-title">Coming Soon</div>
                             </div>
                         </div>
                     </div>
 
-                    <!-- Add your own testimonials here! Replace with real data -->
                 </div>
                 
                 <div class="carousel-indicators">
