--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jannaee Sick - UX/UI Designer & Front-End Engineer</title>
-    <link rel="stylesheet" href="/index-styles.css">
+    <link rel="stylesheet" href="index-styles.css">
 </head>
 <body>
     <!-- Navigation -->
